# toro

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-check.yaml  release.yml
bench/: bench.py
docs/: architecture.md  concepts.md  data-model.md  index.md  processing.md  producing.md  reliability.md  scheduling.md  security.md
examples/: README.md  basic.py  stalled.py
tests/: conftest.py  test_reliability.py
tests/integration/: test_admin.py  test_admin_ordering.py  test_connection.py  test_finished_retention.py  test_introspection.py  test_metrics.py  test_processing.py  test_reliability.py  test_result_dispatcher.py  test_retries.py  test_scheduler.py  test_worker_resilience.py  test_workers.py
tests/load/: harness.py  test_active_list_cost.py  test_admin_scaling.py  test_enqueue_rtt.py  test_load.py  test_promote_blocking.py  test_result_fanout.py  test_worker_concurrency.py
tests/unit/: test_backoff.py  test_histogram.py  test_job.py  test_job_options.py  test_keys.py  test_priority.py  test_scheduler.py
toro/: __init__.py  connection.py  errors.py  job.py  keys.py  queue.py  scheduler.py  scripts.py  worker.py
