[project]
# PyPI distribution name — plain `toro` is taken (abandoned). The import package
# stays `toro` (e.g. `pip install toro-queue` then `import toro`).
name = "toro-queue"
version = "0.0.1"
description = "An async-first, Redis-backed job queue for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ilovepixelart" }]
keywords = ["redis", "queue", "jobs", "async", "asyncio", "task-queue", "worker", "scheduler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "redis>=5.0",
    "croniter>=2.0",
]

[project.urls]
Homepage = "https://github.com/ilovepixelart/toro"
Repository = "https://github.com/ilovepixelart/toro"
Issues = "https://github.com/ilovepixelart/toro/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toro"]

# Managed with uv (https://astral.sh/uv). Dev tooling lives in a uv dependency group.
[dependency-groups]
dev = [
    "hdrhistogram>=0.10.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ty>=0.0.44",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Strictest sensible baseline: enable everything, then opt out deliberately. The
# ruff version is pinned (dev deps) so new rules can't surprise CI.
select = ["ALL"]
ignore = [
    "COM812", "ISC001",            # conflict with the formatter (per Ruff docs)
    "EM101", "EM102", "TRY003",    # inline exception messages read fine in this codebase
    "TRY300",                      # `else`-after-return reads worse than an early return here
    "D203", "D213", "D205",        # docstring whitespace/placement niceties — not worth churn
    "D100", "D104", "D105", "D107", # don't require docstrings on modules/packages/dunder/__init__
    "ANN401",                      # `Any` is intentional at the Redis / JSON boundary
    "PLR2004",                     # small internal magic-number comparisons are clear in context
    "FBT001", "FBT002",            # boolean flags read fine in this API surface
    "D102",                        # docstrings on every public method is too granular here
    "PLR0913",                     # Worker/Queue are config constructors — many kwargs is fine
    "BLE001", "S110", "S112",      # deliberate best-effort excepts in worker/redis cleanup paths
]

[tool.ruff.lint.per-file-ignores]
# Tests/benches/examples: relax docstrings, annotations, asserts, private access, prints,
# implicit-namespace (no __init__), composite asserts, lazy imports, module globals.
"tests/**" = ["S101", "N806", "RUF001", "ANN", "D", "SLF001", "ARG", "PT011",
              "INP001", "PT018", "PT006", "PLC0415", "PLW0603", "T201", "PLW0108", "FBT003"]
"bench/**" = ["ANN", "D", "T201", "S311", "INP001", "PLC0415", "ARG"]
"examples/**" = ["ANN", "D", "T201", "INP001", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The test pyramid, by marker. Run a layer with `pytest -m unit` (fast, no Redis),
# `-m integration` (needs Redis), or `-m load` (slow). conftest auto-marks by folder.
addopts = "--strict-markers --import-mode=importlib"
markers = [
    "unit: pure-logic tests, no I/O — fast and deterministic",
    "integration: Redis-backed tests of real state transitions",
    "load: throughput / scalability tests (slow; opt-in)",
]

[tool.coverage.run]
source_pkgs = ["toro"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["toro"]
